# Message-oriented-middleware-Design-of-Lightweight-RPC-Distributed-Network-Communication-Framework

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test  test.pb.cc  test.pb.h  test.proto
